# divvy

./: .gitignore  LICENSE  Makefile.am  README  base64.h  configure.ac  divvy-cli.c  divvy-internal.h  divvy.c  test-divvy  undivvy-cli.c
include/: divvy.h
test/: gf_inv.cc  gf_mul.cc  gf_sub.cc
